2004-12-07  Norbert Koch  <viteno@xemacs.org>

	* Packages released: locale.

	* Packages released: riece texinfo xemacs-base xemacs-devel.

2004-12-06  Ben Wing  <ben@xemacs.org>

	* XEmacs.rules:
	* XEmacs.rules (FORMAT_INFO_USING_XEMACS_NO_SAVE_ARGS):
	text-modes is also needed due to dependency of texinfmt
	on whitespace.
	
	* XEmacs.rules ($(AUTOLOAD_PATH)/auto-autoloads.el):
	Remove auto-autoloads if package-suppress forms have changed.
	Touch auto-autoloads so it's always up-to-date; otherwise
	problems ensue when no autoloads exist in a package.

2004-12-01  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ecb.

2004-11-30  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ecrypto mail-lib.

2004-11-28  Norbert Koch  <viteno@xemacs.org>

	* Packages released: xemacs-devel.

2004-11-26  Norbert Koch  <viteno@xemacs.org>

	* Packages released: text-modes.

	* Packages released: xemacs-base.

2004-11-23  Norbert Koch  <viteno@xemacs.org>

	* Packages released: xemacs-base.

	* Packages released: xemacs-devel.

2004-11-22  Norbert Koch  <viteno@xemacs.org>

	* Packages released: vc.

	* Packages released: xemacs-devel.

2004-11-09  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils xemacs-devel.

2004-11-08  Norbert Koch  <viteno@xemacs.org>

	*   Packages  released:    bbdb  edit-utils   mail-lib  text-modes
	xemacs-base.

2004-11-07  Ben Wing  <ben@xemacs.org>

	* Local.rules.template:
	* Local.rules.template (XEMACS_BINARY):
	Group settings together.  Put XEmacs binary in XEMACS_BINARY
	not XEMACS (XEMACS may be a wrapper).  Track ever-changing
	Cygwin semantics.  tex etc. is not broken on Cygwin, you just
	need to install the right packages -- document this.

	* XEmacs.rules:
	* XEmacs.rules (distclean):
	* XEmacs.rules (setup-info):
	* XEmacs.rules (.PHONY):
	* XEmacs.rules (binkit):
	* iterate.rules:
	* iterate.rules (ITERATE):
	* iterate.rules (.PHONY):
	* meta-iterate.rules:
	* meta-iterate.rules (ITERATE):